// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with low N 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="testdata  null  indicator"
        data-testid="indicatorrow_testdata"
        id="testdata  null"
      >
        <td
          class="quality_indicator"
        >
          <div
            class="quality_indicator_name"
          >
            <h1>
              qwerty
            </h1>
          </div>
          <div
            class="qi_long_description"
          >
            <p>
              Andel pasienter med qwerty
            </p>
          </div>
        </td>
        <td
          aria-label="Gitt indikator for valgt behandler vises ikke fordi antall observasjoner er lavere enn 10."
          class="nationally"
          data-mui-internal-clone-element="true"
        >
          <div
            class="maskedIndicator"
          >
            Lav N
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders with low achievement level and not complete year 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="barnediabetes_hba1c_ge_9  barnediabetes  indicator"
        data-testid="indicatorrow_barnediabetes_hba1c_ge_9"
        id="barnediabetes_hba1c_ge_9  barnediabetes"
      >
        <td
          class="quality_indicator"
        >
          <div
            class="quality_indicator_name"
          >
            <h1>
              HbA1c ≥ 9,0 %
            </h1>
          </div>
          <div
            class="qi_long_description"
          >
            <p>
              Andel pasienter med HbA1c &gt; 9,0
            </p>
          </div>
          <div
            class="not_complete_year"
          >
            <h4>
              Data for valgt år er ikke komplett. Siste komplette år er
               
              2018
            </h4>
          </div>
        </td>
        <td
          class="nationally "
        >
          <div
            aria-label="Achieved level L"
            class="level"
          >
            <h4>
              11 %
              <i
                style="padding-left: 0.2em;"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(227, 7, 19); font-size: 1.2rem;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
                  />
                </svg>
              </i>
            </h4>
          </div>
          <div
            class="summary"
          >
            300 av 2775
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders with low dg 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="testdata  null  indicator"
        data-testid="indicatorrow_testdata"
        id="testdata  null"
      >
        <td
          class="quality_indicator"
        >
          <div
            class="quality_indicator_name"
          >
            <h1>
              qwerty
            </h1>
          </div>
          <div
            class="qi_long_description"
          >
            <p>
              Andel pasienter med qwerty
            </p>
          </div>
        </td>
        <td
          aria-label="Resultater fra enhet med dekningsgrad lavere enn 60 % vises ikke.       Dekningsgrad angir andel pasienter eller hendelser som registreres, i forhold til antall som skal registreres for gitt indikator.  Om en indikatoren har lav dekningsgrad, er det fare for at utvalget  er skjevt slik at resultatene kan være misvisende og medføre  feilaktige konklusjoner."
          class="nationally"
          data-mui-internal-clone-element="true"
        >
          <div
            class="maskedIndicator"
          >
            Lav dg
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders with missing data 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="testdata  null  indicator"
        data-testid="indicatorrow_testdata"
        id="testdata  null"
      >
        <td
          class="quality_indicator"
        >
          <div
            class="quality_indicator_name"
          >
            <h1>
              qwerty
            </h1>
          </div>
          <div
            class="qi_long_description"
          >
            <p>
              Andel pasienter med qwerty
            </p>
          </div>
        </td>
        <td
          aria-label="Gitt indikator har ingen data for valgt behandler. Dette er enten fordi behandler ikke har rapportert data, eller fordi antall observasjoner er lavere enn 5."
          class="selected_unit"
          data-mui-internal-clone-element="true"
        >
          <div
            class="maskedIndicator"
          >
            Ingen Data
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders with no achievement level on indicator 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="barnediabetes_hba1c_lt_7  barnediabetes  indicator"
        data-testid="indicatorrow_barnediabetes_hba1c_lt_7"
        id="barnediabetes_hba1c_lt_7  barnediabetes"
      >
        <td
          class="quality_indicator"
        >
          <div
            class="quality_indicator_name"
          >
            <h1>
              HbA1c &lt; 7,0 %
            </h1>
          </div>
          <div
            class="qi_long_description"
          >
            <p>
              Andel pasienter med HbA1c &lt; 7,0 %
            </p>
          </div>
          <div
            class="desired_target_level"
          >
            <h4>
              ØNSKET MÅLNIVÅ: 
              ≥
               
              40 %
            </h4>
          </div>
        </td>
        <td
          class="nationally "
        >
          <div
            aria-label="Achieved level undefined"
            class="level"
          >
            <h4>
              20 %
              <i
                style="padding-left: 0.2em;"
              />
            </h4>
          </div>
          <div
            class="summary"
          >
            532 av 2676
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
